--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_paying.xml
@@ -6,48 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".PayingActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_points"
-        android:layout_width="match_parent"
-        android:layout_height="234dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="8dp" />
-
-    <Button
-        android:id="@+id/button_finish"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rv_points"
-        android:layout_centerHorizontal="true"
-        android:onClick="click_finish"
-        android:text="@string/Button_Paying" />
-
-    <ImageView
-        android:id="@+id/imageView_business"
-        android:layout_width="83dp"
-        android:layout_height="80dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        app:srcCompat="@color/colorAccent" />
+        android:layout_marginTop="72dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_spend_points"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView_business"
-        android:layout_toStartOf="@+id/button_finish"
-        android:text="@string/need_points"
-        tools:text="@string/need_points" />
+        <ImageView
+            android:id="@+id/imageView_business"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="18dp"
+            app:srcCompat="@color/colorAccent" />
 
-    <TextView
-        android:id="@+id/textView_points_need"
-        android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_spend_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView_business"
+                android:layout_marginTop="10dp"
+                android:layout_toStartOf="@+id/button_finish"
+                android:layout_weight="1"
+                android:text="@string/need_points"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView_points_need"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/button_finish"
+                android:layout_alignTop="@+id/textView_spend_points"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="0"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button_finish"
-        android:layout_alignTop="@+id/textView_spend_points"
-        android:text="0" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_points"
+            android:layout_width="match_parent"
+            android:layout_height="282dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="8dp">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/button_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rv_points"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:onClick="click_finish"
+            android:text="@string/Button_Paying" />
+    </LinearLayout>
+
 </RelativeLayout>
